fix:validation errors

--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My resume</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+      rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="/myimg.jpg" width="300" alt="my photo" />
+    <img src="/myimg.jpg" width="300" alt="my photo">
     <div class="">
         <!-- Main content section -->
         <div class="">
           <!-- About me section-->
           <div class="">
               <h1 class="">Anastasiya Baranouskaya</h1>
-              <h4 class="">Front-end-Developer</h2>
-              <h4 class="">SUMMARY</h2>
+              <h4 class="">Front-end-Developer</h4>
+              <h4 class="">SUMMARY</h4>
                 <p class="">
                 I am looking for a full-time job as a frontend developer. I have
                 experience working in training team projects as a scrum master.
@@ -146,12 +145,8 @@
                     class=""
                     href="https://github.com/AnastasiyaBaranouskaya/donut-masterclass"
                     >Donut-masterclass</a>
-                    <p>
-                    The project was done during the training course, we used technologies - HTML, CSS, SASS, JS. My position in project - developer. I developed a section: About us and Program.
-                    <span class="">[ </span> HTML5, CSS3, SASS, JS
-                    <span class="">]</span>
-                    </p>
-                </span>
+                  </span>
+                  <p>The project was done during the training course, we used technologies - HTML, CSS, SASS, JS. My position in project - developer. I developed a section: About us and Program. [HTML5, CSS3, SASS, JS]</p>
               </li>
               <li class="">
                 <span class="">
@@ -159,12 +154,8 @@
                     class=""
                     href="https://github.com/AnastasiyaBaranouskaya/project-event-booster"
                     >Project-event-booster</a>
-                    <p>
-                        The project was done during the training course. We used technologies - HTML, CSS, SASS, JS. My position - scrum master and developer. My main task as a scrum master were to compose and distribute tasks for the project in Trello, to carry out Zoom meeting, as a developer - to section main.
-                        <span class="">[</span> JavaScript
-                        <span class="">]</span>
-                    </p>
-                </span>
+                  </span>
+                  <p> The project was done during the training course. We used technologies - HTML, CSS, SASS, JS. My position - scrum master and developer. My main task as a scrum master were to compose and distribute tasks for the project in Trello, to carry out Zoom meeting, as a developer - to section main. [HTML,CSS,JavaScript]</p>
               </li>
              
             </ol>
@@ -173,11 +164,10 @@
             <div class="">
                 <h3 class="">CODE EXAMPLES</h3>
                 <p>Timer</p>   
-                <code >
-                    <div style="margin: 20px;">
+                <div style="margin: 20px;">
                         updateTimer({ container, daysRef, hoursRef, minsRef, secsRef }) {<br>
                             const time = this.targetDate - Date.now();    <br>
-                            if (time < 0) { <br>
+                            if (time &lt; 0) { <br>
                                 clearInterval(this.idInterval); <br>
                                 container.innerHTML = "&lt;<span>h1</span>&gt;Time is over &lt;/h1&gt;"; <br>
                                 return;<br>
@@ -198,8 +188,7 @@
                             .padStart(2, "0");<br>
                         }<br>
                     </div>
-                </code>
-            </div>
+                  </div>
 
             <!-- Education sections -->
           <div class="">
