--- a/index.html
+++ b/index.html
@@ -35,24 +35,17 @@
             <div >
               <h3 >CONTACTS</h3>
               <div>
-               <a  href="tel:+48791654307"
-                  >+48 791 654 307</a
+               <a  href="tel:+48791654307">+48 791 654 307</a
                 >
               </div>
               <div>
-                <a  href="mailto:nastenkabv@gmail.com"
-                  >anastasiyabaranouska@gmail.com</a
-                >
+                <a  href="mailto:nastenkabv@gmail.com">anastasiyabaranouska@gmail.com</a>
               </div>
               <div>
-               <a  href="https://www.linkedin.com/in/anastasiyabaranouskayaa9b549113"
-                  >My linkedin</a
-                >
+               <a  href="https://www.linkedin.com/in/anastasiyabaranouskayaa9b549113">My linkedin</a>
               </div>
               <div>
-                <a class="contcts-section-links" href="https://github.com/Anastasiya-Baranouskaya"
-                  >My GitHub</a
-                >
+                <a href="https://github.com/Anastasiya-Baranouskaya">My GitHub</a>
               </div>
             </div>
             <!-- Tech Skills sections-->
@@ -132,17 +125,13 @@
             <ol >
               <li >
                 <span >
-                  <a
-                   href="https://github.com/AnastasiyaBaranouskaya/donut-masterclass"
-                    >Donut-masterclass</a>
+                  <a href="https://github.com/AnastasiyaBaranouskaya/donut-masterclass">Donut-masterclass</a>
                   </span>
                   <p>The project was done during the training course, we used technologies - HTML, CSS, SASS, JS. My position in project - developer. I developed a section: About us and Program. [HTML5, CSS3, SASS, JS]</p>
               </li>
               <li >
                 <span >
-                  <a
-                    href="https://github.com/AnastasiyaBaranouskaya/project-event-booster"
-                    >Project-event-booster</a>
+                  <a href="https://github.com/AnastasiyaBaranouskaya/project-event-booster">Project-event-booster</a>
                   </span>
                   <p> The project was done during the training course. We used technologies - HTML, CSS, SASS, JS. My position - scrum master and developer. My main task as a scrum master were to compose and distribute tasks for the project in Trello, to carry out Zoom meeting, as a developer - to section main. [HTML,CSS,JavaScript]</p>
               </li>
