--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 </head>
 <body>
     <img src="/myimg.jpg" width="300" alt="my photo">
-    <div >
+    <div>
         <!-- Main content section -->
         <div >
           <!-- About me section-->
-          <div >
-              <h1 >Anastasiya Baranouskaya</h1>
-              <h4 >Front-end-Developer</h4>
-              <h4 >SUMMARY</h4>
-                <p >
+          <div>
+              <h1>Anastasiya Baranouskaya</h1>
+              <h4>Front-end-Developer</h4>
+              <h4>SUMMARY</h4>
+                <p>
                 I am looking for a full-time job as a frontend developer. I have
                 experience working in training team projects as a scrum master.
                 Very important for me It's to work for results and to see progress.
@@ -30,107 +30,106 @@
                 </p>
           </div>
           <!-- sidebar sections -->
-        <aside >
+        <aside>
             <!-- Contacts sections -->
-            <div >
-              <h3 >CONTACTS</h3>
+            <div>
+              <h3>CONTACTS</h3>
               <div>
-               <a  href="tel:+48791654307">+48 791 654 307</a
-                >
+               <a href="tel:+48791654307">+48 791 654 307</a>
               </div>
               <div>
-                <a  href="mailto:nastenkabv@gmail.com">anastasiyabaranouska@gmail.com</a>
+                <a href="mailto:nastenkabv@gmail.com">anastasiyabaranouska@gmail.com</a>
               </div>
               <div>
-               <a  href="https://www.linkedin.com/in/anastasiyabaranouskayaa9b549113">My linkedin</a>
+               <a href="https://www.linkedin.com/in/anastasiyabaranouskayaa9b549113">My linkedin</a>
               </div>
               <div>
                 <a href="https://github.com/Anastasiya-Baranouskaya">My GitHub</a>
               </div>
             </div>
             <!-- Tech Skills sections-->
-            <div >
-              <h3 >MY HARD SKILLS</h3>
-              <ul >
-                <li >
-                  <span > AutoCad</span>
+            <div>
+              <h3>MY HARD SKILLS</h3>
+              <ul>
+                <li>
+                  <span> AutoCad</span>
                 </li>
-                <li >
-                  <span > Vs code</span>
+                <li>
+                  <span> Vs code</span>
                 </li>
-                <li >
-                  <span >HTML 5</span>
+                <li>
+                  <span>HTML 5</span>
                 </li>
-                <li >
-                    <span >CSS 3</span>
+                <li>
+                    <span>CSS 3</span>
                 </li>
-                <li >
-                    <span >SASS</span>
+                <li>
+                    <span>SASS</span>
                 </li>
-                <li >
-                    <span >JavaScript</span>
+                <li>
+                    <span>JavaScript</span>
                 </li>
-                <li >
-                    <span >Git/GitHub</span>
+                <li>
+                    <span>Git/GitHub</span>
                 </li>
-                <li >
-                    <span >React</span>
+                <li>
+                    <span>React</span>
                 </li>
               </ul>
             </div>
            <!-- Soft Skills sections-->
-            <div >
-              <h3 >MY SOFT SKILLS </h3>
-              <ul >
-                <li >
-                  <span >Responsible</span>
+            <div>
+              <h3>MY SOFT SKILLS</h3>
+              <ul>
+                <li>
+                  <span>Responsible</span>
                 </li>
-                <li >
-                  <span >Keep deadlines</span>
+                <li>
+                  <span>Keep deadlines</span>
                 </li>
-                <li >
-                  <span >Responding to feedback</span>
+                <li>
+                  <span>Responding to feedback</span>
                 </li>
-                <li >
-                  <span >Can solve a problem on my own</span>
+                <li>
+                  <span>Can solve a problem on my own</span>
                 </li>
-                <li >
-                  <span >Self-study</span>
+                <li>
+                  <span>Self-study</span>
                 </li>
-                <li >
-                    <span >Team player</span>
+                <li>
+                    <span>Team player</span>
                   </li>
               </ul>
             </div>
            <!-- Knowledge of languages-->
-            <div >
-              <h3 >LANGUAGES</h3>
-              <ul >
-                <li >
-                  <span >Russion - native</span>
+            <div>
+              <h3>LANGUAGES</h3>
+              <ul>
+                <li>
+                  <span>Russion - native</span>
                 </li>
-                <li >
-                  <span >Polish - intermediat</span>
+                <li>
+                  <span>Polish - intermediat</span>
                 </li>
-                <li >
-                  <span >English - pre-intermediat</span>
+                <li>
+                  <span>English - pre-intermediat</span>
                 </li>
               </ul>
             </div>
           </aside>
         </div>
           <!-- My projects section-->
-          <div >
-            <h3 >PROJECT EXPERIENCE</h3>
-            <ol >
-              <li >
-                <span >
+          <div>
+            <h3>PROJECT EXPERIENCE</h3>
+            <ol>
+              <li>
+                <span>
                   <a href="https://github.com/AnastasiyaBaranouskaya/donut-masterclass">Donut-masterclass</a>
                   </span>
                   <p>The project was done during the training course, we used technologies - HTML, CSS, SASS, JS. My position in project - developer. I developed a section: About us and Program. [HTML5, CSS3, SASS, JS]</p>
               </li>
-              <li >
-                <span >
+              <li>
+                <span>
                   <a href="https://github.com/AnastasiyaBaranouskaya/project-event-booster">Project-event-booster</a>
                   </span>
                   <p> The project was done during the training course. We used technologies - HTML, CSS, SASS, JS. My position - scrum master and developer. My main task as a scrum master were to compose and distribute tasks for the project in Trello, to carry out Zoom meeting, as a developer - to section main. [HTML,CSS,JavaScript]</p>
@@ -138,8 +137,8 @@
             </ol>
           </div>
                     <!-- CODE EXAMPLES -->
-            <div >
-                <h3 >CODE EXAMPLES</h3>
+            <div>
+                <h3>CODE EXAMPLES</h3>
                 <p>Timer</p>   
                 <div style="margin: 20px;">
                         updateTimer({ container, daysRef, hoursRef, minsRef, secsRef }) {<br>
@@ -167,21 +166,21 @@
                     </div>
                   </div>
             <!-- Education sections -->
-          <div >
-            <h2 >HIGHER EDUCATION</h2>
-            <h5 >
+          <div>
+            <h2>HIGHER EDUCATION</h2>
+            <h5>
                 Сonstruction Engineer Technologist.<span > |</span>
                 BNTU (BELARUSIAN NATIONAL TECHNICAL UNIVERSITY)
             </h5>           
-            <p >
+            <p>
                 <span style="color: darkgray; font-size: 15px;">September 2009 - June 2014</span>
             </p>
             <i>Production of building products and structures.</i>
            </div>
            <div>
-            <h2 >ADDITIONAL EDUCATION</h2>
-            <h5 >
-                Front-end-Developer [HTML, CSS, SASS, JS, Node, React]<span > |</span>
+            <h2>ADDITIONAL EDUCATION</h2>
+            <h5>
+              Front-end-Developer [HTML, CSS, SASS, JS, Node, React]<span> |</span>
               Courses in Front-end-Developer in GoIt
              </h5>
             <p >
@@ -189,15 +188,15 @@
             </p>
           </div>
           <!-- My work experience section-->
-          <div >
-            <h3 >WORK EXPERIENCE</h3>
+          <div>
+            <h3>WORK EXPERIENCE</h3>
             <!-- Compani 1 -->
             <div>
-                <h3 >
+                <h3>
                   Trafic manager
-                  <span > | </span> Netsense.pl Sp. ZOO
+                  <span> | </span> Netsense.pl Sp. ZOO
                 </h3>
-                <p >
+                <p>
                   August 2022 - now
                 </p>
                 <i>
@@ -206,23 +205,23 @@
               </div>
             </div>
             <!-- Compani 2 -->
-            <div >
-              <h3 >
+            <div>
+              <h3>
                 Engineer
-                <span > | </span>
+                <span> | </span>
                   Bureau of Technical Inventory
               </h3>
-              <p >
+              <p>
                 February 2020 - September 2022
               </p>
-              <ul >
-                <li >
+              <ul>
+                <li>
                   Inventory of apartment buildings.
                 </li>
-                <li >
+                <li>
                   Drawings in the AutoCad of measured houses.
                 </li>
-                <li >
+                <li>
                   Preparation of technical documentation for real estate.
                 </li>
               </ul>
