fix: number telophon

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <h3 >CONTACTS</h3>
               <div>
                <a  href="tel:+48791654307"
-                  >+48 791 654 307</a
+                  >+48&nbsp;791&nbsp;654&nbsp;307</a
                 >
               </div>
               <div>
