--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <img src="/myimg.jpg" width="300" alt="my photo">
